--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextResultz | Home</title>
-    <link rel="icon" href="#">
+    <link rel="icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="../assets/Home.css">
     <script src="https://kit.fontawesome.com/552542671f.js" crossorigin="anonymous"></script>
 </head>
